<resources>
    <string name="app_name">Pc\'sBooking</string>
    <string name="background_image_description">Background image showing abstract design</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_profile">Profile\n</string>
    <string name="title_book">Book</string>
    <string name="title_manage">Manage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_timeslot">Book time</string>
    <string name="title_available_days">Avaiable days</string>
    <string name="title_my_bookings">My upcoming bookings:</string>
    <string name="add_machine">Add Machine</string>
</resources>