<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pcsbooking.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_manage"
        android:name="com.example.pcsbooking.ui.manage.ManageFragment"
        android:label="@string/title_manage"
        tools:layout="@layout/fragment_manage" />

    <fragment
        android:id="@+id/navigation_book"
        android:name="com.example.pcsbooking.ui.Book.BookFragment"
        android:label="@string/title_book"
        tools:layout="@layout/fragment_book" >
        <action
            android:id="@+id/action_bookFragment_to_timeSlotFragment"
            app:destination="@id/navigation_timeslot" />
    </fragment>
    <fragment
        android:id="@+id/navigation_timeslot"
        android:name="com.example.pcsbooking.ui.Book.TimeSlotFragment"
        android:label="@string/title_timeslot"
        tools:layout="@layout/fragment_time_slot" />


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.pcsbooking.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>